G/Parser.output
   0  $accept : %entry% $end

   1  Prog : FunDecs EOF

   2  FunDecs : Type Sid LPAR Decs RPAR Stat FunDecs
   3          |

   4  Type : INT
   5       | CHAR

   6  Decs : Decs1 Dec
   7       |

   8  Decs1 : Decs1 Dec SEMICOLON
   9        |

  10  Dec : Type Sids

  11  Sids : Sid COMMA Sids
  12       | Sid

  13  Sid : ID
  14      | REF

  15  Stats : Stat Stats
  16        |

  17  Stat : Exp SEMICOLON
  18       | IF LPAR Exp RPAR Stat
  19       | IF LPAR Exp RPAR Stat ELSE Stat
  20       | WHILE LPAR Exp RPAR Stat
  21       | RETURN Exp SEMICOLON
  22       | LBRACE Decs1 Stats RBRACE

  23  Exp : NUM
  24      | CHARCONST
  25      | STRINGCONST
  26      | Lval
  27      | Lval ASSIGN Exp
  28      | Exp PLUS Exp
  29      | Exp MINUS Exp
  30      | Exp LESS Exp
  31      | Exp EQUAL Exp
  32      | ID LPAR Exps RPAR
  33      | LPAR Exp RPAR

  34  Exps :
  35       | Exps1

  36  Exps1 : Exp
  37        | Exp COMMA Exps

  38  Lval : ID
  39       | REF
  40       | ID LBRACK Exp RBRACK

  41  %entry% : '\001' Prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Prog  (41)
	FunDecs : .  (3)

	CHAR  shift 3
	INT  shift 4
	EOF  reduce 3

	Prog  goto 5
	FunDecs  goto 6
	Type  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Type : CHAR .  (5)

	.  reduce 5


state 4
	Type : INT .  (4)

	.  reduce 4


state 5
	%entry% : '\001' Prog .  (41)

	.  reduce 41


state 6
	Prog : FunDecs . EOF  (1)

	EOF  shift 8
	.  error


state 7
	FunDecs : Type . Sid LPAR Decs RPAR Stat FunDecs  (2)

	ID  shift 9
	REF  shift 10
	.  error

	Sid  goto 11


state 8
	Prog : FunDecs EOF .  (1)

	.  reduce 1


state 9
	Sid : ID .  (13)

	.  reduce 13


state 10
	Sid : REF .  (14)

	.  reduce 14


state 11
	FunDecs : Type Sid . LPAR Decs RPAR Stat FunDecs  (2)

	LPAR  shift 12
	.  error


state 12
	FunDecs : Type Sid LPAR . Decs RPAR Stat FunDecs  (2)
	Decs : .  (7)
	Decs1 : .  (9)

	CHAR  reduce 9
	INT  reduce 9
	RPAR  reduce 7

	Decs  goto 13
	Decs1  goto 14


state 13
	FunDecs : Type Sid LPAR Decs . RPAR Stat FunDecs  (2)

	RPAR  shift 15
	.  error


state 14
	Decs : Decs1 . Dec  (6)
	Decs1 : Decs1 . Dec SEMICOLON  (8)

	CHAR  shift 3
	INT  shift 4
	.  error

	Type  goto 16
	Dec  goto 17


state 15
	FunDecs : Type Sid LPAR Decs RPAR . Stat FunDecs  (2)

	CHARCONST  shift 18
	ID  shift 19
	IF  shift 20
	LBRACE  shift 21
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 30


state 16
	Dec : Type . Sids  (10)

	ID  shift 9
	REF  shift 10
	.  error

	Sid  goto 31
	Sids  goto 32


state 17
	Decs : Decs1 Dec .  (6)
	Decs1 : Decs1 Dec . SEMICOLON  (8)

	SEMICOLON  shift 33
	RPAR  reduce 6


state 18
	Exp : CHARCONST .  (24)

	.  reduce 24


state 19
	Exp : ID . LPAR Exps RPAR  (32)
	Lval : ID .  (38)
	Lval : ID . LBRACK Exp RBRACK  (40)

	LBRACK  shift 34
	LPAR  shift 35
	ASSIGN  reduce 38
	COMMA  reduce 38
	EQUAL  reduce 38
	LESS  reduce 38
	MINUS  reduce 38
	PLUS  reduce 38
	RBRACK  reduce 38
	RPAR  reduce 38
	SEMICOLON  reduce 38


state 20
	Stat : IF . LPAR Exp RPAR Stat  (18)
	Stat : IF . LPAR Exp RPAR Stat ELSE Stat  (19)

	LPAR  shift 36
	.  error


state 21
	Stat : LBRACE . Decs1 Stats RBRACE  (22)
	Decs1 : .  (9)

	.  reduce 9

	Decs1  goto 37


state 22
	Exp : LPAR . Exp RPAR  (33)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 38
	Lval  goto 29


state 23
	Exp : NUM .  (23)

	.  reduce 23


state 24
	Lval : REF .  (39)

	.  reduce 39


state 25
	Stat : RETURN . Exp SEMICOLON  (21)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 39
	Lval  goto 29


state 26
	Exp : STRINGCONST .  (25)

	.  reduce 25


state 27
	Stat : WHILE . LPAR Exp RPAR Stat  (20)

	LPAR  shift 40
	.  error


state 28
	Stat : Exp . SEMICOLON  (17)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)

	EQUAL  shift 41
	LESS  shift 42
	MINUS  shift 43
	PLUS  shift 44
	SEMICOLON  shift 45
	.  error


state 29
	Exp : Lval .  (26)
	Exp : Lval . ASSIGN Exp  (27)

	ASSIGN  shift 46
	COMMA  reduce 26
	EQUAL  reduce 26
	LESS  reduce 26
	MINUS  reduce 26
	PLUS  reduce 26
	RBRACK  reduce 26
	RPAR  reduce 26
	SEMICOLON  reduce 26


state 30
	FunDecs : Type Sid LPAR Decs RPAR Stat . FunDecs  (2)
	FunDecs : .  (3)

	CHAR  shift 3
	INT  shift 4
	EOF  reduce 3

	FunDecs  goto 47
	Type  goto 7


state 31
	Sids : Sid . COMMA Sids  (11)
	Sids : Sid .  (12)

	COMMA  shift 48
	RPAR  reduce 12
	SEMICOLON  reduce 12


state 32
	Dec : Type Sids .  (10)

	.  reduce 10


state 33
	Decs1 : Decs1 Dec SEMICOLON .  (8)

	.  reduce 8


state 34
	Lval : ID LBRACK . Exp RBRACK  (40)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 49
	Lval  goto 29


state 35
	Exp : ID LPAR . Exps RPAR  (32)
	Exps : .  (34)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	RPAR  reduce 34

	Exp  goto 50
	Exps  goto 51
	Exps1  goto 52
	Lval  goto 29


state 36
	Stat : IF LPAR . Exp RPAR Stat  (18)
	Stat : IF LPAR . Exp RPAR Stat ELSE Stat  (19)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 53
	Lval  goto 29


state 37
	Decs1 : Decs1 . Dec SEMICOLON  (8)
	Stat : LBRACE Decs1 . Stats RBRACE  (22)
	Stats : .  (16)

	CHAR  shift 3
	CHARCONST  shift 18
	ID  shift 19
	IF  shift 20
	INT  shift 4
	LBRACE  shift 21
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	RBRACE  reduce 16

	Type  goto 16
	Dec  goto 54
	Exp  goto 28
	Lval  goto 29
	Stat  goto 55
	Stats  goto 56


state 38
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)
	Exp : LPAR Exp . RPAR  (33)

	EQUAL  shift 41
	LESS  shift 42
	MINUS  shift 43
	PLUS  shift 44
	RPAR  shift 57
	.  error


state 39
	Stat : RETURN Exp . SEMICOLON  (21)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)

	EQUAL  shift 41
	LESS  shift 42
	MINUS  shift 43
	PLUS  shift 44
	SEMICOLON  shift 58
	.  error


state 40
	Stat : WHILE LPAR . Exp RPAR Stat  (20)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 59
	Lval  goto 29


state 41
	Exp : Exp EQUAL . Exp  (31)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 60
	Lval  goto 29


state 42
	Exp : Exp LESS . Exp  (30)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 61
	Lval  goto 29


state 43
	Exp : Exp MINUS . Exp  (29)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 62
	Lval  goto 29


state 44
	Exp : Exp PLUS . Exp  (28)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 63
	Lval  goto 29


state 45
	Stat : Exp SEMICOLON .  (17)

	.  reduce 17


state 46
	Exp : Lval ASSIGN . Exp  (27)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 64
	Lval  goto 29


state 47
	FunDecs : Type Sid LPAR Decs RPAR Stat FunDecs .  (2)

	.  reduce 2


state 48
	Sids : Sid COMMA . Sids  (11)

	ID  shift 9
	REF  shift 10
	.  error

	Sid  goto 31
	Sids  goto 65


state 49
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)
	Lval : ID LBRACK Exp . RBRACK  (40)

	EQUAL  shift 41
	LESS  shift 42
	MINUS  shift 43
	PLUS  shift 44
	RBRACK  shift 66
	.  error


state 50
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)
	Exps1 : Exp .  (36)
	Exps1 : Exp . COMMA Exps  (37)

	COMMA  shift 67
	EQUAL  shift 41
	LESS  shift 42
	MINUS  shift 43
	PLUS  shift 44
	RPAR  reduce 36


state 51
	Exp : ID LPAR Exps . RPAR  (32)

	RPAR  shift 68
	.  error


state 52
	Exps : Exps1 .  (35)

	.  reduce 35


state 53
	Stat : IF LPAR Exp . RPAR Stat  (18)
	Stat : IF LPAR Exp . RPAR Stat ELSE Stat  (19)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)

	EQUAL  shift 41
	LESS  shift 42
	MINUS  shift 43
	PLUS  shift 44
	RPAR  shift 69
	.  error


state 54
	Decs1 : Decs1 Dec . SEMICOLON  (8)

	SEMICOLON  shift 33
	.  error


state 55
	Stats : Stat . Stats  (15)
	Stats : .  (16)

	CHARCONST  shift 18
	ID  shift 19
	IF  shift 20
	LBRACE  shift 21
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	RBRACE  reduce 16

	Exp  goto 28
	Lval  goto 29
	Stat  goto 55
	Stats  goto 70


state 56
	Stat : LBRACE Decs1 Stats . RBRACE  (22)

	RBRACE  shift 71
	.  error


state 57
	Exp : LPAR Exp RPAR .  (33)

	.  reduce 33


state 58
	Stat : RETURN Exp SEMICOLON .  (21)

	.  reduce 21


state 59
	Stat : WHILE LPAR Exp . RPAR Stat  (20)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)

	EQUAL  shift 41
	LESS  shift 42
	MINUS  shift 43
	PLUS  shift 44
	RPAR  shift 72
	.  error


state 60
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)
	Exp : Exp EQUAL Exp .  (31)

	COMMA  reduce 31
	EQUAL  reduce 31
	LESS  reduce 31
	MINUS  reduce 31
	PLUS  reduce 31
	RBRACK  reduce 31
	RPAR  reduce 31
	SEMICOLON  reduce 31


state 61
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp LESS Exp .  (30)
	Exp : Exp . EQUAL Exp  (31)

	EQUAL  shift 41
	MINUS  shift 43
	PLUS  shift 44
	COMMA  reduce 30
	LESS  reduce 30
	RBRACK  reduce 30
	RPAR  reduce 30
	SEMICOLON  reduce 30


state 62
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp MINUS Exp .  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)

	EQUAL  shift 41
	COMMA  reduce 29
	LESS  reduce 29
	MINUS  reduce 29
	PLUS  reduce 29
	RBRACK  reduce 29
	RPAR  reduce 29
	SEMICOLON  reduce 29


state 63
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp PLUS Exp .  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)

	EQUAL  shift 41
	COMMA  reduce 28
	LESS  reduce 28
	MINUS  reduce 28
	PLUS  reduce 28
	RBRACK  reduce 28
	RPAR  reduce 28
	SEMICOLON  reduce 28


state 64
	Exp : Lval ASSIGN Exp .  (27)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (31)

	EQUAL  shift 41
	LESS  shift 42
	MINUS  shift 43
	PLUS  shift 44
	COMMA  reduce 27
	RBRACK  reduce 27
	RPAR  reduce 27
	SEMICOLON  reduce 27


state 65
	Sids : Sid COMMA Sids .  (11)

	.  reduce 11


state 66
	Lval : ID LBRACK Exp RBRACK .  (40)

	.  reduce 40


state 67
	Exps1 : Exp COMMA . Exps  (37)
	Exps : .  (34)

	CHARCONST  shift 18
	ID  shift 19
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	STRINGCONST  shift 26
	RPAR  reduce 34

	Exp  goto 50
	Exps  goto 73
	Exps1  goto 52
	Lval  goto 29


state 68
	Exp : ID LPAR Exps RPAR .  (32)

	.  reduce 32


state 69
	Stat : IF LPAR Exp RPAR . Stat  (18)
	Stat : IF LPAR Exp RPAR . Stat ELSE Stat  (19)

	CHARCONST  shift 18
	ID  shift 19
	IF  shift 20
	LBRACE  shift 21
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 74


state 70
	Stats : Stat Stats .  (15)

	.  reduce 15


state 71
	Stat : LBRACE Decs1 Stats RBRACE .  (22)

	.  reduce 22


state 72
	Stat : WHILE LPAR Exp RPAR . Stat  (20)

	CHARCONST  shift 18
	ID  shift 19
	IF  shift 20
	LBRACE  shift 21
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 75


state 73
	Exps1 : Exp COMMA Exps .  (37)

	.  reduce 37


state 74
	Stat : IF LPAR Exp RPAR Stat .  (18)
	Stat : IF LPAR Exp RPAR Stat . ELSE Stat  (19)

	ELSE  shift 76
	CHAR  reduce 18
	CHARCONST  reduce 18
	EOF  reduce 18
	ID  reduce 18
	IF  reduce 18
	INT  reduce 18
	LBRACE  reduce 18
	LPAR  reduce 18
	NUM  reduce 18
	RBRACE  reduce 18
	REF  reduce 18
	RETURN  reduce 18
	STRINGCONST  reduce 18
	WHILE  reduce 18


state 75
	Stat : WHILE LPAR Exp RPAR Stat .  (20)

	.  reduce 20


state 76
	Stat : IF LPAR Exp RPAR Stat ELSE . Stat  (19)

	CHARCONST  shift 18
	ID  shift 19
	IF  shift 20
	LBRACE  shift 21
	LPAR  shift 22
	NUM  shift 23
	REF  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 77


state 77
	Stat : IF LPAR Exp RPAR Stat ELSE Stat .  (19)

	.  reduce 19


28 terminals, 16 nonterminals
42 grammar rules, 78 states
